<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/novaConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nova_conta"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/botaoCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_black_bg"
            android:text="@string/cancelar"
            android:textColor="#fff"
            android:textSize="@dimen/topbar_button_font_size" />

        <TextView
            android:id="@+id/botaoCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_blue_bg"
            android:text="@string/criar"
            android:textColor="#fff"
            android:textSize="@dimen/topbar_button_font_size" />
    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topbar"
        android:background="#ccc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator1"
        android:background="#fff" >

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/inicie_o_cadastro_usando"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="15dp" >

                <ImageButton
                    android:id="@+id/botao_logar_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/btn_logar_facebook" />

                <ImageButton
                    android:id="@+id/botao_logar_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/twitter"
                    android:src="@drawable/btn_logar_twitter" />

                <ImageButton
                    android:id="@+id/botao_logar_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/google"
                    android:src="@drawable/btn_logar_google" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/ou_preencha_os_dados"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />

            <EditText
                android:id="@+id/campoNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/textbox_bg"
                android:hint="@string/nome_completo"
                android:padding="12dp"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />

            <EditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textbox_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/campoSenha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />

                <EditText
                    android:id="@+id/campoConfirmarSenha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:ellipsize="end"
                    android:hint="@string/confirme_a_senha"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/campoTelefone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />

                <EditText
                    android:id="@+id/campoCPF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:hint="@string/cpf"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />
            </LinearLayout>

            <EditText
                android:id="@+id/campoEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textbox_bg"
                android:hint="@string/endereco"
                android:padding="12dp"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/campoComplemento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:hint="@string/complemento"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />

                <EditText
                    android:id="@+id/campoCEP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_bg"
                    android:hint="@string/cep"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textSize="@dimen/navigation_text_size" />
            </LinearLayout>

            <EditText
                android:id="@+id/campoBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textbox_bg"
                android:hint="@string/bairro"
                android:padding="12dp"
                android:textColor="#000"
                android:textSize="@dimen/navigation_text_size" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>