<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp" >

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/botaoCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_black_bg"
            android:text="@string/cancelar"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/botaoEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_blue_bg"
            android:text="@string/entrar"
            android:textColor="#fff" />
    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topbar"
        android:background="#ccc" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_margin="5dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="@dimen/navigation_text_size" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoEmail"
        android:layout_margin="5dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="@dimen/navigation_text_size" />

    <TextView
        android:id="@+id/linkEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoSenha"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:padding="30dp"
        android:text="@string/esqueceu_a_senha"
        android:textColor="@color/text_next_color"
        android:textSize="@dimen/instruction_text_size" />

</RelativeLayout>