<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:padding="10dp" >

        <TextView
            android:id="@+id/filtros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/filtros"
            android:textColor="#000"
            android:textSize="21sp" />

        <Button
            android:id="@+id/botaoConcluido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_blue_bg"
            android:text="@string/concluido"
            android:textColor="#fff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <br.com.ntxdev.zup.widget.SeekbarWithIntervals
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="20dp" />
            
            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/seekBar"
                android:background="#ccc" />
            
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator2"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/seta_expandir"
                android:padding="25dp"
                android:text="@string/todos_os_status"
                android:textSize="20sp" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/status"
                android:background="#ccc" />
            
            <LinearLayout
                android:id="@+id/opcoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator3"
                android:background="#fff"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/todosStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/todos_os_status"
                    android:textColor="#2ab4dc"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/resolvidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/resolvidos"
                    android:textColor="@color/text_option_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/emAndamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/em_andamento"
                    android:textColor="@color/text_option_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/emAberto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/em_aberto"
                    android:textColor="@color/text_option_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/naoResolvidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/nao_resolvidos"
                    android:textColor="@color/text_option_color"
                    android:textSize="20sp" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/bairros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/opcoes"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/seta_expandir"
                android:padding="25dp"
                android:text="@string/todos_os_bairros"
                android:textSize="20sp" />

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/bairros"
                android:background="#ccc" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>